--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "6.0.3-dev.20240910",
+  "version": "6.1.0-dev.20240910-2",
   "description": "Nestia CLI tool",
   "main": "bin/index.js",
   "bin": {
