--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.17.5",
+  "version": "0.18.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,9 +37,9 @@
   "homepage": "https://nestia.io",
   "devDependencies": {
     "@nestia/benchmark": "^0.2.3",
-    "@nestia/core": "^3.11.1",
+    "@nestia/core": "^3.13.0",
     "@nestia/e2e": "^0.7.0",
-    "@nestia/fetcher": "^3.11.1",
+    "@nestia/fetcher": "^3.13.0",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
@@ -70,7 +70,7 @@
     "inquirer": "8.2.5",
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
-    "typescript": "5.5.4",
+    "typescript": "^5.5.4",
     "typia": "^6.10.0"
   },
   "files": [
