--- a/website/package.json
+++ b/website/package.json
@@ -34,7 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-mui-fileuploader": "^0.5.2",
-    "typia": "^7.0.0-dev.20241021-2"
+    "typia": "^7.0.0-dev.20241022"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
