--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -34,7 +34,7 @@
     "ts-patch": "^3.2.1",
     "typescript": "5.5.4",
     "typescript-transform-paths": "^3.4.7",
-    "typia": "^7.0.0-dev.20241022",
+    "typia": "^7.0.0-dev.20241022-2",
     "uuid": "^10.0.0"
   },
   "dependencies": {
