--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,7 +49,7 @@
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
     "tgrid": "^1.0.0",
-    "typia": "^7.0.0-dev.20241022",
+    "typia": "^7.0.0-dev.20241022-2",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
@@ -58,7 +58,7 @@
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
-    "typia": ">=7.0.0-dev.20241022 <8.0.0"
+    "typia": ">=7.0.0-dev.20241022-2 <8.0.0"
   },
   "devDependencies": {
     "@fastify/multipart": "^8.1.0",
