--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -71,7 +71,7 @@
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "^5.5.4",
-    "typia": "^7.0.0-dev.20241022"
+    "typia": "^7.0.0-dev.20241022-2"
   },
   "files": [
     "lib",
