--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,14 +1,36 @@
 {
   "name": "@nestia/editor",
-  "private": true,
   "version": "0.1.0",
-  "type": "module",
+  "typings": "lib/index.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
   "scripts": {
+    "build:lib": "tsc --project tsconfig.lib.json && rollup -c",
+    "build:static": "tsc -b && vite build",
     "dev": "vite",
-    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samchon/nestia"
+  },
+  "keywords": [
+    "openapi",
+    "swagger",
+    "generator",
+    "typescript",
+    "editor",
+    "sdk",
+    "nestjs",
+    "nestia"
+  ],
+  "author": "Jeongho Nam",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/samchon/nestia/issues"
+  },
+  "homepage": "https://nestia.io",
   "dependencies": {
     "@mui/material": "^5.15.6",
     "@nestia/migrate": "^0.18.2",
@@ -21,6 +43,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@types/js-yaml": "^4.0.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -31,8 +55,16 @@
     "globals": "^15.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rollup": "^4.24.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
-  }
+  },
+  "files": [
+    "README.md",
+    "LICENSE",
+    "package.json",
+    "lib",
+    "src"
+  ]
 }
