Deploy `@nestia/editor`

--- a/website/package.json
+++ b/website/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "5.15.6",
     "@mui/system": "5.15.6",
     "@nestia/editor": "0.3.0",
+    "jszip": "^3.10.1",
     "next": "14.2.13",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
