--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "description": "Nestia Guide Documents",
   "private": true,
   "scripts": {
-    "build": "rimraf .next && rimraf .out && node build/typedoc && next build && node build/sitemap",
+    "build": "rimraf .next && rimraf .out && node build/editor && node build/typedoc && next build && node build/sitemap",
     "deploy": "node build/deploy",
     "dev": "next dev"
   },
@@ -23,7 +23,7 @@
     "@mui/icons-material": "5.15.6",
     "@mui/material": "5.15.6",
     "@mui/system": "5.15.6",
-    "@nestia/editor": "0.3.0",
+    "@nestia/editor": "0.3.1",
     "jszip": "^3.10.1",
     "next": "14.2.13",
     "nextra": "^2.13.4",
