--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,7 @@ updates:
       - dependency-name: ts-node
       - dependency-name: ts-patch
       - dependency-name: typescript
+      - dependency-name: typescript-transform-paths
     groups:
       NestJS:
         patterns:
@@ -39,3 +40,4 @@ updates:
           - "ts-node"
           - "ts-patch"
           - "typescript"
+          - "typescript-transform-paths"
