--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.19.0-dev.20241112",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.19.0-dev.20241112.tgz",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@samchon/openapi": "^1.2.2",
