--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "6.2.0",
+  "version": "6.3.0",
   "description": "Nestia CLI tool",
   "main": "bin/index.js",
   "bin": {
@@ -42,7 +42,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.16",
     "rimraf": "^3.0.2",
-    "typescript": "^5.6.2"
+    "typescript": "~5.6.3"
   },
   "files": [
     "bin",
