--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -69,13 +69,13 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "@samchon/openapi": "^1.1.2",
+    "@samchon/openapi": "^2.0.0-dev.20241127-2",
     "commander": "10.0.0",
     "inquirer": "8.2.5",
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "^5.5.4",
-    "typia": "^7.0.0-dev.20241022-2"
+    "typia": "^7.0.0-dev.20241027-2"
   },
   "files": [
     "lib",
