--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "4.0.0-dev.20241022",
+  "version": "4.0.0-dev.20241027",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,9 +32,9 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "../core/nestia-core-4.0.0-dev.20241022.tgz",
-    "@nestia/fetcher": "../fetcher/nestia-fetcher-4.0.0-dev.20241022.tgz",
-    "@samchon/openapi": "^1.1.0",
+    "@nestia/core": "../core/nestia-core-4.0.0-dev.20241027.tgz",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-4.0.0-dev.20241027.tgz",
+    "@samchon/openapi": "^2.0.0-dev.20241127-2",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,16 +44,16 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^7.0.0-dev.20241022-2"
+    "typia": "^7.0.0-dev.20241027-2"
   },
   "peerDependencies": {
-    "@nestia/core": ">=4.0.0-dev.20241022",
-    "@nestia/fetcher": ">=4.0.0-dev.20241022",
+    "@nestia/core": ">=4.0.0-dev.20241027",
+    "@nestia/fetcher": ">=4.0.0-dev.20241027",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
-    "typia": ">=7.0.0-dev.20241022-2 <8.0.0"
+    "typia": ">=7.0.0-dev.20241027-2 <8.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
