Fix compiler part to support `@TypedFormData()`'s options

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,7 +40,9 @@
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@samchon/openapi": "^2.0.0-dev.20241127-2",
+    "@types/multer": "^1.4.11",
     "detect-ts-node": "^1.0.5",
+    "fastify-multer": "^2.0.3",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
     "multer": "1.4.5-lts.1",
@@ -49,7 +51,7 @@
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
     "tgrid": "^1.0.0",
-    "typia": "^7.0.0-dev.20241027-2",
+    "typia": ">=7.0.0-dev.20241027-2 <8.0.0",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
@@ -66,7 +68,6 @@
     "@types/express": "^4.17.15",
     "@types/glob": "^7.2.0",
     "@types/inquirer": "^9.0.3",
-    "@types/multer": "^1.4.11",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.4.5",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -74,8 +75,7 @@
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "eslint-plugin-deprecation": "^1.4.1",
-    "fastify": "^4.25.2",
-    "fastify-multer": "^2.0.3",
+    "fastify": "^4.28.1",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
     "rimraf": "^3.0.2",
