--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.20.0",
+  "version": "0.21.0-dev.20241127",
   "description": "Migration program from swagger to NestJS",
   "typings": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -37,10 +37,10 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/benchmark": "^0.2.3",
-    "@nestia/core": "^3.19.1",
+    "@nestia/benchmark": "^0.3.0-dev.20241127-2",
+    "@nestia/core": "^4.0.0-dev.20241127-4",
     "@nestia/e2e": "^0.7.0",
-    "@nestia/fetcher": "^3.19.1",
+    "@nestia/fetcher": "^4.0.0-dev.20241127-4",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
@@ -51,6 +51,7 @@
     "@types/cli-progress": "^3.11.5",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.3",
     "@types/swagger-ui-express": "^4.1.6",
     "chalk": "4.1.2",
@@ -58,6 +59,7 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "rimraf": "^5.0.1",
     "rollup": "^4.24.3",
     "serialize-error": "^4.1.0",
@@ -69,13 +71,14 @@
     "typescript-transform-paths": "^3.5.2"
   },
   "dependencies": {
+    "@nestia/sdk": "^4.0.0-dev.20241127-4",
     "@samchon/openapi": "^2.0.0-dev.20241127-2",
     "commander": "10.0.0",
     "inquirer": "8.2.5",
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "~5.6.3",
-    "typia": "^7.0.0-dev.20241027-2"
+    "typia": "^7.0.0-dev.20241127-2"
   },
   "files": [
     "lib",
