--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "4.0.0-dev.20241127-4",
+  "version": "4.0.0-dev.20241129",
   "description": "Nestia station",
   "scripts": {
     "build": "node build/index.js",
