--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -41,7 +41,7 @@
     "ts-patch": "^3.2.1",
     "typescript": "^5.5.3",
     "typescript-transform-paths": "^3.4.7",
-    "typia": "^7.0.0-dev.20241027-2"
+    "typia": "^7.0.0-dev.20241029"
   },
   "files": [
     "lib",
