--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -53,6 +53,6 @@
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.2.1",
-    "typescript": "5.5.4"
+    "typescript": "~5.6.3"
   }
 }
