--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -80,7 +80,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.2.1",
     "tstl": "^3.0.0",
-    "typescript": "5.5.4"
+    "typescript": "~5.6.3"
   },
   "files": [
     "README.md",
