--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -39,7 +39,7 @@
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.2.1",
-    "typescript": "^5.5.3",
+    "typescript": "~5.6.3",
     "typescript-transform-paths": "^3.4.7",
     "typia": "^7.0.0-dev.20241029"
   },
