--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^18.3.1",
     "rollup": "^4.24.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
+    "typescript": "~5.6.3",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
   },
