--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -37,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "rimraf": "^3.0.2",
-    "typescript": "5.5.4",
+    "typescript": "~5.6.3",
     "typia": ">=7.0.0-dev.20241029 <8.0.0"
   },
   "files": [
