--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -70,7 +70,7 @@
     "rimraf": "^3.0.2",
     "tgrid": "^1.0.3",
     "ts-patch": "^3.2.1",
-    "typescript": "5.5.4",
+    "typescript": "~5.6.3",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
   },
