--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,8 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^4.0.0-dev.20241129",
-    "@nestia/fetcher": "^4.0.0-dev.20241129",
+    "@nestia/core": "../core/nestia-core-4.0.0-dev.20241129.tgz",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-4.0.0-dev.20241129.tgz",
     "@samchon/openapi": "^2.0.0-dev.20241129-8",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
