--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^4.0.0-dev.20241130",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-4.0.0-dev.20241130.tgz",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@samchon/openapi": "^2.0.0-dev.20241130",
