--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -38,7 +38,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "rimraf": "^3.0.2",
     "typescript": "~5.6.3",
-    "typia": ">=7.0.0-dev.20241202 <8.0.0"
+    "typia": "^7.0.0-dev.20241202"
   },
   "files": [
     "README.md",
