--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,7 +39,7 @@
     "@nestia/fetcher": "../fetcher/nestia-fetcher-4.0.0-dev.20241202.tgz",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
-    "@samchon/openapi": "^2.0.0-dev.20241202-2",
+    "@samchon/openapi": "2.0.0-dev.20241202-2",
     "detect-ts-node": "^1.0.5",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -48,7 +48,7 @@
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
     "tgrid": "^1.0.0",
-    "typia": "^7.0.0-dev.20241202",
+    "typia": "7.0.0-dev.20241202",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
