--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@samchon/openapi": "^2.0.0-dev.20241202-2",
-    "typia": "^7.0.0-dev.20241202"
+    "@samchon/openapi": "2.0.0-dev.20241202-2",
+    "typia": "7.0.0-dev.20241202"
   },
   "peerDependencies": {
     "typescript": ">= 4.8.0"
@@ -38,7 +38,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "rimraf": "^3.0.2",
     "typescript": "~5.6.3",
-    "typia": "^7.0.0-dev.20241202"
+    "typia": "7.0.0-dev.20241202"
   },
   "files": [
     "README.md",
