--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,8 +14,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - name: Root Install
-        run: npm run package:tgz
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Root Setup
+        run: pnpm install && npm run build
       - name: Build
         working-directory: website 
         run: npm install && npm run build
