--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -37,12 +37,12 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/benchmark": "^0.3.0",
-    "@nestia/core": "^4.0.4",
-    "@nestia/e2e": "^0.7.0",
-    "@nestia/fetcher": "^4.0.4",
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/core": "^10.3.8",
+    "@nestia/benchmark": "workspace:^",
+    "@nestia/core": "workspace:^",
+    "@nestia/e2e": "workspace:^",
+    "@nestia/fetcher": "workspace:^",
+    "@nestjs/common": "^10.4.13",
+    "@nestjs/core": "^10.4.13",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/platform-fastify": "^10.3.8",
     "@rollup/plugin-terser": "^0.4.4",
@@ -71,7 +71,7 @@
     "typescript-transform-paths": "^3.5.2"
   },
   "dependencies": {
-    "@nestia/sdk": "^4.0.4",
+    "@nestia/sdk": "workspace:^",
     "@samchon/openapi": "^2.0.1",
     "commander": "10.0.0",
     "inquirer": "8.2.5",
