--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,14 @@ name: build
 on: 
   push:
     paths:
+      - '.github/workflows/build.yml'
       - 'packages/{core,fetcher,sdk}/src/**'
       - 'packages/{core,fetcher,sdk}/package.json'
       - 'test/**'
       - 'test/package.json'
   pull_request:
     paths:
+      - '.github/workflows/build.yml'
       - 'packages/*/src/**'
       - 'packages/*/package.json'
       - 'test/**'
