--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "4.0.5-dev.20241207-3",
+  "version": "4.0.5",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -47,8 +47,8 @@
     "typia": "^7.0.2"
   },
   "peerDependencies": {
-    "@nestia/core": ">=4.0.5-dev.20241207-3",
-    "@nestia/fetcher": ">=4.0.5-dev.20241207-3",
+    "@nestia/core": ">=4.0.5",
+    "@nestia/fetcher": ">=4.0.5",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
