--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "rimraf": "^5.0.1",
     "sloc": "^0.3.0"
   },
-  "overrides": {
-    "@jridgewell/gen-mapping": "0.3.5"
+  "pnpm": {
+    "overrides": {
+      "@jridgewell/gen-mapping": "0.3.5"
+    }
   }
 }
