--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "node deploy build",
     "package:latest": "node deploy publish --tag latest",
     "package:next": "node deploy publish --tag next",
-    "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write",
-    "test": "cd test && npm run start"
+    "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write"
   },
   "repository": {
     "type": "git",
