Fix github actions bug again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: test
         working-directory: ./test
-        run: npm start
+        run: pnpm install && npm start -- --skipBuild
