--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: lts/*
           registry-url: https://registry.npmjs.org/
       - uses: pnpm/action-setup@v2
         with:
