--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node deploy build",
     "package:latest": "node deploy publish --tag latest",
     "package:next": "node deploy publish --tag next",
-    "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write"
+    "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write",
+    "preinstall": "npx only-allow pnpm"
   },
   "repository": {
     "type": "git",
