--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "4.2.0",
+  "version": "4.2.0-dev.20241215",
   "description": "Nestia station",
   "scripts": {
     "build": "node deploy build",
