--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "4.2.0-dev.20241211-2",
+  "version": "4.2.0-dev.20241215",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -44,11 +44,11 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^7.2.0"
+    "typia": "^7.3.0"
   },
   "peerDependencies": {
-    "@nestia/core": ">=4.2.0-dev.20241211-2",
-    "@nestia/fetcher": ">=4.2.0-dev.20241211-2",
+    "@nestia/core": ">=4.2.0-dev.20241215",
+    "@nestia/fetcher": ">=4.2.0-dev.20241215",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
