--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -40,7 +40,7 @@
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
     "react-mui-fileuploader": "^0.5.2",
-    "typia": "^7.4.1-dev.20241216-2"
+    "typia": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
