--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/agent",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Super A.I. Chatbot agent by Swagger Document",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
@@ -8,9 +8,10 @@
   "scripts": {
     "prepare": "ts-patch install && typia patch",
     "build": "npm run build:main && npm run build:test",
-    "build:main": "rimraf lib && tsc && rollup -c",
+    "build:main": "rimraf lib && npm run build:prompt && tsc && rollup -c",
     "build:test": "rimraf bin && tsc -p test/tsconfig.json",
-    "dev": "npm run build:test -- --watch"
+    "build:prompt": "ts-node build/prompt.ts",
+    "dev": "npm run build:prompt && npm run build:test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -41,19 +42,20 @@
     "src"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
     "@nestia/e2e": "^0.7.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
     "@samchon/shopping-api": "^0.11.0",
     "@types/node": "^22.10.5",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "chalk": "4.1.2",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.29.1",
+    "ts-node": "^10.9.2",
     "ts-patch": "^3.3.0",
     "tstl": "^3.0.0",
     "typescript": "~5.7.2",
