--- a/website/package.json
+++ b/website/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "nestia.io",
   "version": "3.1.1",
   "description": "Nestia Guide Documents",
@@ -18,17 +19,22 @@
     "url": "https://github.com/samchon/nestia/issues"
   },
   "dependencies": {
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
-    "@mui/icons-material": "5.15.6",
-    "@mui/material": "5.15.6",
-    "@mui/system": "5.15.6",
-    "@nestia/editor": "latest",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
+    "@mui/system": "^6.4.0",
+    "@nestia/agent": "^0.3.7",
+    "@nestia/chat": "^0.2.4",
+    "@nestia/editor": "^4.6.1",
+    "@samchon/openapi": "^2.4.0",
+    "@samchon/shopping-api": "^0.14.0",
     "next": "14.2.21",
     "nextra": "^3.2.4",
     "nextra-theme-docs": "^3.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "openai": "^4.79.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
