Deploy `@nestia/chat` on the website

--- a/packages/chat/tsconfig.lib.json
+++ b/packages/chat/tsconfig.lib.json
@@ -102,5 +102,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["./src"],
-  "exclude": ["./src/shopping.tsx"],
+  "exclude": ["./src/main.tsx", "./src/shopping.tsx"],
 }
