--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/chat",
-  "version": "0.2.4",
+  "version": "0.3.1",
   "type": "module",
   "main": "./lib/index.mjs",
   "typings": "./lib/index.d.ts",
@@ -35,12 +35,19 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
+    "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.0",
     "@nestia/agent": "^0.3.7",
     "@samchon/openapi": "^2.4.0",
     "html2canvas": "^1.4.1",
     "js-file-download": "^0.4.12",
+    "js-yaml": "^4.1.0",
+    "react-json-editor-ajrm": "^2.5.14",
     "react-markdown": "^9.0.3",
+    "react-mui-fileuploader": "^0.5.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-mermaid-plugin": "^1.0.2",
     "typia": "^7.6.0"
   },
   "devDependencies": {
@@ -56,6 +63,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-json-editor-ajrm": "^2.5.6",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -78,6 +86,7 @@
     "dist",
     "lib",
     "src",
+    "!src/main.ts",
     "!src/shopping.ts"
   ]
 }
